--- a/memeweb/src/App.css
+++ b/memeweb/src/App.css
@@ -1,32 +1,64 @@
 .App {
-  text-align: center;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height: 100vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.game {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-direction: row;
+    width: -webkit-fill-available;
+    box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.gameOverview {
+    background-color: gold;
+    width: 30%;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+.Button {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    background-color: #FF1F8C;
+    box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Button:hover {
+    background-color: rgba(243, 61, 149, 0.5);
+}
+
+.playersContainer {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-right: 6%;
+}
+
+.Player {
+    height: 20%;
+    width: 25%;
+    background-color: red;
+    margin-left: 6%;
+    margin-bottom: 6%;
+    box-sizing: border-box;
+}
+
+.playerImage {
+    height: auto;
+    width: 60px;
+}
+
+h1 {
+    font-size: 200%;
 }
