--- a/memeweb/src/App.css
+++ b/memeweb/src/App.css
@@ -16,14 +16,14 @@
     box-sizing: border-box;
 }
 
-.gameOverview {
+/* .gameOverview {
     background-color: gold;
     width: 30%;
     padding: 20px;
     box-sizing: border-box;
-}
+} */
 
-.Button {
+/* .Button {
     width: 50%;
     display: flex;
     justify-content: center;
@@ -33,9 +33,9 @@
 
 .Button:hover {
     background-color: rgba(243, 61, 149, 0.5);
-}
+} */
 
-.playersContainer {
+/* .playersContainer {
     width: 70%;
     display: flex;
     flex-direction: column;
@@ -43,22 +43,22 @@
     align-items: center;
     flex-wrap: wrap;
     padding-right: 6%;
-}
+} */
 
-.Player {
+/* .Player {
     height: 20%;
     width: 25%;
     background-color: red;
     margin-left: 6%;
     margin-bottom: 6%;
     box-sizing: border-box;
-}
+} */
 
-.playerImage {
+/* .playerImage {
     height: auto;
     width: 60px;
-}
+} */
 
-h1 {
-    font-size: 200%;
+body{
+    font-family: 'Open Sans', sans-serif;
 }
