--- a/memeweb/src/components/restartGame/style.css
+++ b/memeweb/src/components/restartGame/style.css
@@ -1,13 +1,19 @@
 .Button {
     /* width: 50%;
     display: flex; */
+    text-align: center;
+    /* display: flex; */
     justify-content: center;
     /* background-color: #FF1F8C; */
     border-style:solid;
     border-radius: 50%;
     border-color: black;
     padding: 2em;
+    width: 15em;
+}
 
+.Button h1{
+    text-align: center;
 }
 
 .Button:hover {
