final version for demo

--- a/memeweb/src/pages/winnerRoom/style.css
+++ b/memeweb/src/pages/winnerRoom/style.css
@@ -1,8 +1,14 @@
 .containerW{
     text-align: center;
+    /* display: flex;
+    flex-direction: row; */
 }
 
 .winMeme{
     display: flex;
     justify-content: center;
+}
+
+.restartButton{
+    margin-left:42vw;
 }
