--- a/memeweb/src/components/button/style.css
+++ b/memeweb/src/components/button/style.css
@@ -1,7 +1,7 @@
 .Button {
     /* width: 50%;
     display: flex; */
-    justify-content: center;
+    /* justify-content: center; */
     /* background-color: #FF1F8C; */
     border-style:solid;
     border-radius: 50%;
