--- a/memeweb/src/pages/waitingRoom/style.css
+++ b/memeweb/src/pages/waitingRoom/style.css
@@ -5,7 +5,6 @@
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    padding-right: 6%;
 }
 
 /* .gameOverview1 {
@@ -21,6 +20,7 @@
     flex-direction: row;
     width: 100vw;
     height: 100vh;
+    justify-content: center;
 }
 
 #title {
